<?xml version="1.0"?>
<package format="3">
  <name>uav_offboard_py</name>
  <version>0.0.1</version>
  <description>ROS 2 Jazzy PX4 offboard control node for UAV environmental monitoring missions (Gazebo Harmonic + PX4 SITL).</description>

  <maintainer email="jhon@example.com">Jhonattan Jesus Ojeda Arroyo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

